[project]
name = "kedro-runner-service"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "galenseilis", email = "galen.seilis@seilis.ca" }
]
dependencies = [
    "fastapi>=0.112.0",
    "pydantic>=2.8.2",
    "cerberus>=1.3.5",
    "uvicorn>=0.30.5",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.32",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kedro_runner_service"]
